compilateurDeca/src/test/deca/syntax/valid/sans_objet/if_else.deca

// Description:
//
// Teste if else 
// Historique:09/01/2026
{
    if (true){
        print (0);
    }
    else{
        print (1);
    }
}