compilateurDeca/src/test/deca/syntax/invalid/sans_objet/ident.deca

//Description
//
//Teste l’usage d’un mot-clé comme identificateur
// Historique:
//    cree le 08/01/2026

{
    int if;
}